--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-<h1>Cabral
-</h1>
-<ul><li>acessesorios
-</li><li>roupas</li>
+<header class="cabeçalho">
+<img class="C-logo" src="C:\Users\felyp\OneDrive\Imagens\C logo.png" alt="Cabral">
+<ul class="produtos-cabeçalho">
+     <li class="roupas-cabeçalho">roupas</li>
+     <li class="acessorios-cabeçalho">acessórios</li>
 </ul>
     
 </header>
