cabeçalho realmente criado "protótipo"

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
 <header class="cabeçalho">
 <img class="C-logo" src="C:\Users\felyp\OneDrive\Imagens\C logo.png" alt="Cabral">
 <ul class="produtos-cabeçalho">
-     <li class="roupas-cabeçalho">roupas</li>
-     <li class="acessorios-cabeçalho">acessórios</li>
+     <li class="produto-cabeçalho">Roupas</li>
+     <li class="produto-cabeçalho">Acessórios</li>
 </ul>
-    
-</header>
-<body>
-   
-</body>
-</html>
